--- a/Aula0202/index.html
+++ b/Aula0202/index.html
@@ -14,7 +14,7 @@
             <a class="nav-item nav-link active" href="index.html">尾花<span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#">Oque Eu Ouço</a>
             <a class="nav-item nav-link" href="#">FRSN</a>
-            <a class="nav-item nav-link" href="#">Discografia</a>
+            <a class="nav-item nav-link" href="discografia.html">Discografia</a>
             <a class="nav-item nav-link" href="#">Videografia</a>
             <a class="nav-item nav-link" href="#">Influência Musical</a>
             <a class="nav-item nav-link" href="#">Resiliência</a>
