--- a/Aula0202/discografia.html
+++ b/Aula0202/discografia.html
@@ -37,7 +37,7 @@
                 <img class="mr-3" src="img/FRSN/2.jpg" alt="segundo álbum" width="90" height="90" />
                 <div class="media-body">
                   <h5 class="mt-0">O Quarto dos Livros</h5>
-                  Segundo álbum publicado pela gravadora BMG em 2003. Disponível no Spotify.
+                  Segundo álbum distribuído de forma independente pela banda através da BMG em 2003. Disponível no Spotify.
                 </div>
             </div>
         </div>
@@ -47,10 +47,60 @@
                 <img class="mr-3" src="img/FRSN/3.jpg" alt="segundo álbum" width="90" height="90" />
                 <div class="media-body">
                   <h5 class="mt-0">O Rio, A Cidade, A Árvore</h5>
-                  Terceiro álbum publicado pela gravadora BMG em 2004. Disponível no Spotify.
+                  Terceiro álbum distribuído de forma independente pela banda através da BMG em 2004. Disponível no Spotify.
                 </div>
             </div>
-        </div>           
+        </div>
+        <br />
+        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
+            <div class="media">
+                <img class="mr-3" src="img/FRSN/4.jpg" alt="segundo álbum" width="90" height="90" />
+                <div class="media-body">
+                  <h5 class="mt-0">Ciano</h5>
+                  Quarto álbum distribuído de forma independente pela banda através da BMG em 2006. Disponível no Spotify.
+                </div>
+            </div>
+        </div>
+        <br />
+        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
+            <div class="media">
+                <img class="mr-3" src="img/FRSN/5.jpg" alt="segundo álbum" width="90" height="90" />
+                <div class="media-body">
+                  <h5 class="mt-0">Redenção</h5>
+                  Quinto álbum publicado pela gravadora Arsenal Music em 2008. Disponível no Spotify.
+                </div>
+            </div>
+        </div>
+        <br />
+        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
+            <div class="media">
+                <img class="mr-3" src="img/FRSN/DVD.jpg" alt="segundo álbum" width="90" height="90" />
+                <div class="media-body">
+                  <h5 class="mt-0">O Outro Lado da Porta</h5>
+                  Primeiro DVD publicado pela gravadora Arsenal Music em 2009. Disponível no Spotify.
+                </div>
+            </div>
+        </div> 
+        <br />
+        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
+            <div class="media">
+                <img class="mr-3" src="img/FRSN/6.jpg" alt="segundo álbum" width="90" height="90" />
+                <div class="media-body">
+                  <h5 class="mt-0">Revanche</h5>
+                  Sexto álbum publicado pela gravadora Arsenal / Universal Music em 2010. Disponível no Spotify.
+                </div>
+            </div>
+        </div>    
+        <br />
+        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
+            <div class="media">
+                <img class="mr-3" src="img/FRSN/7.jpg" alt="segundo álbum" width="90" height="90" />
+                <div class="media-body">
+                  <h5 class="mt-0">Cemitério das Boas Intenções</h5>
+                  Sétimo álbum distribuído de forma independente pela banda através da BMG em 2004. Disponível no Spotify.
+                </div>
+            </div>
+        </div>      
     </main>
 </body>
 </html>
