História e Discografia incompleta
Faltam uns álbuns e fazer mais umas gracinhas nas páginas prontas

--- a/Aula0202/discografia.html
+++ b/Aula0202/discografia.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <title>Discografia FRSN</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 </head>
@@ -12,8 +13,8 @@
     <header>
         <nav class="navbar navbar-dark bg-dark">
             <a class="nav-item nav-link active" href="index.html">尾花<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Oque Eu Ouço</a>
-            <a class="nav-item nav-link" href="#">FRSN</a>
+            <a class="nav-item nav-link" href="gostos.html">Oque Eu Ouço</a>
+            <a class="nav-item nav-link" href="frsn.html">FRSN</a>
             <a class="nav-item nav-link" href="discografia.html">Discografia</a>
             <a class="nav-item nav-link" href="#">Videografia</a>
             <a class="nav-item nav-link" href="#">Influência Musical</a>
@@ -21,86 +22,221 @@
         </nav>
     </header>
     <main>
-        <br />
-        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <div class="media">
-                <img class="mr-3" src="img/FRSN/1.jpg" alt="primeiro álbum" width="90" height="90" />
-                <div class="media-body">
-                  <h5 class="mt-0">O Acaso do Erro</h5>
-                  Primeiro álbum publicado de forma independente pela banda em 2000.
-                </div>
-            </div>
-        </div>
-        <br />
-        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <div class="media">
-                <img class="mr-3" src="img/FRSN/2.jpg" alt="segundo álbum" width="90" height="90" />
-                <div class="media-body">
-                  <h5 class="mt-0">O Quarto dos Livros</h5>
-                  Segundo álbum distribuído de forma independente pela banda através da BMG em 2003. Disponível no Spotify.
-                </div>
-            </div>
-        </div>
-        <br />
-        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <div class="media">
-                <img class="mr-3" src="img/FRSN/3.jpg" alt="segundo álbum" width="90" height="90" />
-                <div class="media-body">
-                  <h5 class="mt-0">O Rio, A Cidade, A Árvore</h5>
-                  Terceiro álbum distribuído de forma independente pela banda através da BMG em 2004. Disponível no Spotify.
-                </div>
-            </div>
-        </div>
-        <br />
-        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <div class="media">
-                <img class="mr-3" src="img/FRSN/4.jpg" alt="segundo álbum" width="90" height="90" />
-                <div class="media-body">
-                  <h5 class="mt-0">Ciano</h5>
-                  Quarto álbum distribuído de forma independente pela banda através da BMG em 2006. Disponível no Spotify.
-                </div>
-            </div>
-        </div>
-        <br />
-        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <div class="media">
-                <img class="mr-3" src="img/FRSN/5.jpg" alt="segundo álbum" width="90" height="90" />
-                <div class="media-body">
-                  <h5 class="mt-0">Redenção</h5>
-                  Quinto álbum publicado pela gravadora Arsenal Music em 2008. Disponível no Spotify.
-                </div>
-            </div>
-        </div>
-        <br />
-        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <div class="media">
-                <img class="mr-3" src="img/FRSN/DVD.jpg" alt="segundo álbum" width="90" height="90" />
-                <div class="media-body">
-                  <h5 class="mt-0">O Outro Lado da Porta</h5>
-                  Primeiro DVD publicado pela gravadora Arsenal Music em 2009. Disponível no Spotify.
-                </div>
-            </div>
-        </div> 
-        <br />
-        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <div class="media">
-                <img class="mr-3" src="img/FRSN/6.jpg" alt="segundo álbum" width="90" height="90" />
-                <div class="media-body">
-                  <h5 class="mt-0">Revanche</h5>
-                  Sexto álbum publicado pela gravadora Arsenal / Universal Music em 2010. Disponível no Spotify.
-                </div>
-            </div>
-        </div>    
-        <br />
-        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <div class="media">
-                <img class="mr-3" src="img/FRSN/7.jpg" alt="segundo álbum" width="90" height="90" />
-                <div class="media-body">
-                  <h5 class="mt-0">Cemitério das Boas Intenções</h5>
-                  Sétimo álbum distribuído de forma independente pela banda através da BMG em 2004. Disponível no Spotify.
-                </div>
-            </div>
-        </div>      
+        <h2 style="padding-top: 2%; padding-bottom: 2%;">
+            Discografia
+        </h2>
+        <table class="tabelaDisco">
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/1.jpg" alt="primeiro álbum" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">O Acaso do Erro</h5>
+                        Primeiro álbum publicado de forma independente pela banda em 2000. Disponível no Youtube.
+                    </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/2.jpg" alt="segundo álbum" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">O Quarto dos Livros</h5>
+                        Segundo álbum distribuído de forma independente pela banda através da BMG em 2003. Disponível no Spotify.
+                      </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/3.jpg" alt="terceiro álbum" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">O Rio, A Cidade, A Árvore</h5>
+                        Terceiro álbum distribuído de forma independente pela banda através da BMG em 2004. Disponível no Spotify.
+                      </div>
+                </td>
+            </tr>
+            
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/4.jpg" alt="quarto álbum" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">Ciano</h5>
+                        Quarto álbum distribuído de forma independente pela banda através da BMG em 2006. Disponível no Spotify.
+                      </div>
+                </td>
+            </tr> 
+
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/5.jpg" alt="quinto álbum" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">Redenção</h5>
+                        Quinto álbum publicado pela gravadora Arsenal Music em 2008. Disponível no Spotify.
+                      </div>
+                </td>
+            </tr> 
+
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/DVD.jpg" alt="ptimeiro dvd" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">O Outro Lado da Porta</h5>
+                        Primeiro DVD publicado pela gravadora Arsenal Music em 2009. Disponível no Spotify.
+                      </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/6.jpg" alt="sexto álbum" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">Revanche</h5>
+                        Sexto álbum publicado pela gravadora Arsenal / Universal Music em 2010. Disponível no Spotify.
+                      </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/ep1.jpg" alt="primeiro ep" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">Cemitério das boas intenções</h5>
+                        Primeiro EP distribuído de forma independente pela banda através da BMG em 2012. Disponível no Spotify.
+                      </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/7.jpg" alt="sétimo álbum" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">Infinito</h5>
+                        Sétimo álbum distribuído de forma independente pela banda através da BMG em 2012. Disponível no Spotify.
+                      </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/ep2.jpg" alt="sétimo álbum" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">Eu Sou a Maré Viva</h5>
+                        Segundo EP distribuído de forma independente pela banda através da BMG em 2014. Disponível no Spotify.
+                      </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/8.jpg" alt="oitavo álbum" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">A Sinfonia de Tudo que Há</h5>
+                        Oitavo álbum distribuído de forma independente pela banda através da BMG em 2016. Disponível no Spotify.
+                    </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/8.2.jpg" alt="oitavo álbum deluxe" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">A Sinfonia de Tudo que Há (Deluxe)</h5>
+                        Versão deluxe distribuído de forma independente pela banda através da BMG em 2017. Disponível no Spotify.
+                    </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/9.jpg" alt="nono álbum" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">Sua Alegria Foi Cancelada</h5>
+                        Nono álbum distribuído de forma independente pela banda através da BMG em 2019. Disponível no Spotify.
+                    </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/ep3.jpg" alt="nono álbum" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">INVENTÁRIO</h5>
+                        Décimo álbum distribuído de forma independente pela banda através da BMG em 2021. Disponível no Spotify.
+                    </div>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td>
+                    <div class="media">
+                        <img class="mr-3" src="img/FRSN/10.jpg" alt="décimo álbum" widtd="90" height="90" />
+                    </div>
+                </td>
+                <td>
+                    <div class="media-body">
+                        <h5 class="mt-0">Vou Ter Que Me Virar</h5>
+                        Décimo primeiro álbum distribuído de forma independente pela banda através da BMG em 2021. Disponível no Spotify.
+                    </div>
+                </td>
+            </tr>
+        </table>
     </main>
 </body>
 </html>
