--- a/Aula0202/index.html
+++ b/Aula0202/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem sou eu</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 </head>
@@ -12,8 +13,8 @@
     <header>
         <nav class="navbar navbar-dark bg-dark">
             <a class="nav-item nav-link active" href="index.html">尾花<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Oque Eu Ouço</a>
-            <a class="nav-item nav-link" href="#">FRSN</a>
+            <a class="nav-item nav-link" href="gostos.html">Oque Eu Ouço</a>
+            <a class="nav-item nav-link" href="frsn.html">FRSN</a>
             <a class="nav-item nav-link" href="discografia.html">Discografia</a>
             <a class="nav-item nav-link" href="#">Videografia</a>
             <a class="nav-item nav-link" href="#">Influência Musical</a>
@@ -24,9 +25,9 @@
     <main>
         <p style="align-items: center; justify-content: center; display: flex; flex-direction: row;">quatro coisa que eu gosto mt, violao, praia, bike e carro, mt bacaninha👍🏻</p>
         <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <img src="img/violao.jfif" class="img-thumbnail" alt="..." width="200" height="200" />
-            <img src="img/bike.jpeg" class="img-thumbnail" alt="..." width="200" height="200" />
-            <img src="img/carro.jfif" class="img-thumbnail" alt="..." width="200" height="200" />
+            <img src="img/violao.jfif" class="img-thumbnail" alt="..." width="350" height="200" />
+            <img src="img/bike.jpeg" class="img-thumbnail" alt="..." width="350" height="200" />
+            <img src="img/carro.jfif" class="img-thumbnail" alt="..." width="350" height="200" />
         </div>
         <br />
         <hr />
