história da banda quase finalizada, falta melhorar a inicial

--- a/Aula0202/index.html
+++ b/Aula0202/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem sou eu</title>
     <script src="js/java.js" defer></script> 
+    <link rel="icon" href="img/FRSN/logo.PNG">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
@@ -27,21 +28,21 @@
     <main>
         <p style="align-items: center; justify-content: center; display: flex; flex-direction: row;">quatro coisa que eu gosto mt, violao, praia, bike e carro, mt bacaninha👍🏻</p>
         <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <img src="img/violao.jfif" class="img-thumbnail" alt="..." width="350" height="200" />
-            <img src="img/bike.jpeg" class="img-thumbnail" alt="..." width="350" height="200" />
-            <img src="img/carro.jfif" class="img-thumbnail" alt="..." width="350" height="200" />
+            <img src="img/violao.jfif" id="imgindex" class="img-thumbnail" alt="..." width="350" height="200" />
+            <img src="img/bike.jpeg" id="imgindex" class="img-thumbnail" alt="..." width="350" height="200" />
+            <img src="img/carro.jfif" id="imgindex" class="img-thumbnail" alt="..." width="350" height="200" />
         </div>
         
-        
+        <!--<img src="https://64.media.tumblr.com/f7be9445cafb84dff3dbd1c85a5e8ec6/tumblr_otqp3gNfhC1t51kf8o1_500.gifv" class="img-thumbnail" alt="..." width="350" height="200" />-->
 
         <br />
         <hr />
         <p style="align-items: center; justify-content: center; display: flex; flex-direction: row;">otras duas coisa que eu gosto pacas, mamae e papai</p>
         <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <img src="img/mae.jpg" class="img-thumbnail" alt="..." width="500" height="200" />
+            <img src="img/mae.jpg" id="imgindex" class="img-thumbnail" alt="..." width="500" height="200" />
         </div>
         <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <img src="img/pai.jfif" class="img-thumbnail" alt="..." width="300" height="200" />
+            <img src="img/pai.jfif" id="imgindex" class="img-thumbnail" alt="..." width="300" height="200" />
         </div>
         <br />
         <hr />
