possível carrossel só com js a vir (ou outro esquema com fotos)

--- a/Aula0202/index.html
+++ b/Aula0202/index.html
@@ -26,11 +26,23 @@
     </header>
     <br />
     <main>
+        <div class="carrossel">
+            <div class="setaesquerda" onclick="imganterior()" >
+                <img src="img/esquerda.png"width="30"/>
+            </div>
+            <div class="setadireita">
+                <img src="img/direita.png" onclick="proximg()" width="30"/>
+            </div>
+
+            <div>
+                <img src="" id="imgopc" />
+            </div>
+        </div>
         <p style="align-items: center; justify-content: center; display: flex; flex-direction: row;">quatro coisa que eu gosto mt, violao, praia, bike e carro, mt bacaninha👍🏻</p>
         <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <img src="img/violao.jfif" id="imgindex" class="img-thumbnail" alt="..." width="350" height="200" />
-            <img src="img/bike.jpeg" id="imgindex" class="img-thumbnail" alt="..." width="350" height="200" />
-            <img src="img/carro.jfif" id="imgindex" class="img-thumbnail" alt="..." width="350" height="200" />
+            <img src="img/violao.jfif" class="img-thumbnail" alt="..." width="350" height="200" />
+            <img src="img/bike.jpeg" class="img-thumbnail" alt="..." width="350" height="200" />
+            <img src="img/carro.jfif" class="img-thumbnail" alt="..." width="350" height="200" />
         </div>
         
         <!--<img src="https://64.media.tumblr.com/f7be9445cafb84dff3dbd1c85a5e8ec6/tumblr_otqp3gNfhC1t51kf8o1_500.gifv" class="img-thumbnail" alt="..." width="350" height="200" />-->
@@ -39,10 +51,10 @@
         <hr />
         <p style="align-items: center; justify-content: center; display: flex; flex-direction: row;">otras duas coisa que eu gosto pacas, mamae e papai</p>
         <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <img src="img/mae.jpg" id="imgindex" class="img-thumbnail" alt="..." width="500" height="200" />
+            <img src="img/mae.jpg" class="img-thumbnail" alt="..." width="500" height="200" />
         </div>
         <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <img src="img/pai.jfif" id="imgindex" class="img-thumbnail" alt="..." width="300" height="200" />
+            <img src="img/pai.jfif" class="img-thumbnail" alt="..." width="300" height="200" />
         </div>
         <br />
         <hr />
