tudo menos o index ta bão (y)
carrossel manual funcionando, falta lógica para a ordem das imagens

--- a/Aula0202/index.html
+++ b/Aula0202/index.html
@@ -26,6 +26,7 @@
     </header>
     <br />
     <main>
+        <!-- TESTES DO CARROSSEL MANUAL
         <div class="carrossel">
             <div class="setaesquerda" onclick="imganterior()" >
                 <img src="img/esquerda.png"width="30"/>
@@ -37,7 +38,8 @@
             <div>
                 <img src="" id="imgopc" />
             </div>
-        </div>
+        </div>-->
+
         <p style="align-items: center; justify-content: center; display: flex; flex-direction: row;">quatro coisa que eu gosto mt, violao, praia, bike e carro, mt bacaninha👍🏻</p>
         <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
             <img src="img/violao.jfif" class="img-thumbnail" alt="..." width="350" height="200" />
@@ -59,7 +61,7 @@
         <br />
         <hr />
         <p style="align-items: center; justify-content: center; display: flex; flex-direction: row;">eu jogo de tk pq eh legal (edita video tbm eh maneiro) | so mt bom em joguinho de ritmo, pago cinquentao no pix pra jogar um x1 com qqr um</p>
-        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
+        <div class="videosyt">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/OLmKEYb0j8s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/9xecxl8SnGg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
