--- a/Aula0202/gostos.html
+++ b/Aula0202/gostos.html
@@ -39,6 +39,12 @@
             <p>
                 Com apenas 15 anos de idade, Peep fez sua primeira tatuagem mostrando os seus primeiros traços de garoto rebelde. Lil Peep resolveu abandonar o ensino médio e começou a fazer cursos on-line de informática, vindo a obter um diploma. Mas seu interesse era pela música, em pouco tempo começou a fazer gravações sob seu nome "Lil Peep", e a postá-las no YouTube e SoundCloud, ele dizia fazer a maioria de suas músicas com menos de 5 minutos cada. Suas influências eram bandas como Blink-182 , Fivio Foreign , Red Hot Chili Peppers e My Chemical Romance. Com 16 anos, Peep desenvolveu ansiedade, algo que o fazia ter uma série de vômitos na parte da manhã. Sua mãe sabia dos seus problemas e tentava o convencer a consultar um psicólogo, mas ele preferia se auto medicar, principalmente com maconha e um remédio chamado xanax, um fármaco utilizado em distúrbios da ansiedade e em crises de agorafobia.
             </p>
+            <p>
+                Em 2015, Ahr lançou seu primeiro mixtape, Lil Peep Part One, com algum sucesso, gerando 4.000 exibições na primeira semana. No mesmo ano, lançou seu primeiro EP Feelz e outra mixtape, Live Forever.
+            </p>
+            <p>
+                Em 2016, Åhr lançou os dois mixtapes que alavancaram a sua carreira: Crybaby em Junho e Hellboy, em setembro. Em maio de 2017, a banda Mineral acusou Åhr de plágio, com base na canção "Hollywood Dreaming" conter uma sample não licenciada e não creditada da canção "LoveLetterTypewriter", retirada do álbum dos Minerais de 1998, EndSerenading. Åhr disse que estava somente tentando "mostrar alguma admiração" ao utilizar aquele sample.
+            </p>
         </div>
         <br />
         <br />
