navbar nova, td bacaninha, menos a index podi

--- a/Aula0202/gostos.html
+++ b/Aula0202/gostos.html
@@ -47,7 +47,6 @@
             </p>
         </div>
         <br />
-        <br />
         <div class="videosyt">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Stodb_Tnr84" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
@@ -59,7 +58,7 @@
             </i></p>
         </div>
         <div class="pcomfoto2">
-            <img src="img/gostos/peepgif.gif" class="img-thumbnail" width="210" alt="">
+            <img src="img/gostos/peepgif.gif" class="img-thumbnail" width="250" alt="">
         </div>
         <div class="content">
             <p>
@@ -80,7 +79,7 @@
             </p>
         </div>
         <div class="pcomfoto">
-            <img src="img/gostos/top.jpg" class="img-thumbnail" width="300" alt="">
+            <img src="img/gostos/top.jpg" class="img-thumbnail" width="400" alt="">
         </div>
         <div class="content">
             <p>
@@ -132,8 +131,8 @@
                 鬱P lit. "Depressão-P", Nagoia, 1 de dezembro de 1990, é um produtor musical japonês, DJ, e um dos pioneiros do movimento "Vocaloud", que une Vocaloid ao rock e metal. Utsu-P iniciou sua carreira em junho de 2008, publicando canções originais em sites como Niconico e Piapro, lançando seu primeiro trabalho, o extended play (EP) Doll, em 2009.
             </p>
         </div>
-        <div class="videosyt1">
-            <iframe width="550" height="300" src="https://www.youtube.com/embed/QvMNzt3iXyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div class="pcomfoto1">
+            <img src="img/gostos/utsup.jpg" width="200" class="img-thumbnail" alt="">
         </div>
         <div class="content">
             <p>
@@ -141,6 +140,29 @@
             </p>
             <p>
                 Utsu-P cita System of a Down, Korn, Hatebreed, Protest the Hero, Kin'niku Shōjo Tai, The Band Apart, B'z, Aerosmith e Mr. Big como influências de sua música.
+            </p>
+            <br />
+            <hr />
+            <h2>
+                Bring Me The Horizon
+            </h2>
+            <p>
+                Abreviado para BMTH, é uma banda britânica de rock, formada em 2004 em Sheffield, South Yorkshire. O grupo é composto atualmente pelo vocalista Oliver Sykes, o guitarrista Lee Malia, o baixista Matt Kean, o baterista Matt Nicholls e o tecladista Jordan Fish. Eles assinaram contrato com a RCA Records globalmente e com a Columbia Records exclusivamente nos Estados Unidos.
+            </p>
+        </div>
+        <div class="pcomfoto1">
+            <img src="img/gostos/bmth.jpg" width="480" class="img-thumbnail" alt="">
+        </div>
+        <div class="content">
+            <p>
+                O primeiro lançamento oficial do Bring Me the Horizon foi o EP de 4 faixas intitulado This Is What the Edge of Your Seat Was Made For, lançado no final de 2004. A banda veio a lançar seu álbum de estreia, Count Your Blessings em 2006. Após o lançamento, o som do álbum gerou divisões entre ouvintes e foi recebido com desdém pela crítica. O Bring Me the Horizon veio a começar a romper com seu polêmico som com Suicide Season (2008), o qual foi uma virada criativa, crítica e comercial para a banda, já que o som pesado do deathcore rapidamente perdeu o espaço em consequência da sonoridade mais eclética presente ao novo álbum. A banda lançou seu terceiro álbum, There Is a Hell Believe Me I've Seen It. There Is a Heaven Let's Keep It a Secret. (2010), levando-os a uma maior fama internacional, ao mesmo tempo que incorporou influências da música clássica, eletrônica e pop. Seu quarto álbum de estúdio, Sempiternal (2013) alcançou a certificação Gold na Austrália, vendendo 35.000 cópias e Silver no Reino Unido, vendendo 60.000 cópias. Já o quinto álbum, That's the Spirit (2015) estreou em segundo lugar nas mais importantes paradas de música do Reino Unido e Estados Unidos, sendo elas, respectivamente, UK Albums Chart e US Billboard 200.
+                Seu sexto álbum de estúdio, Amo (2019), tornou-se o primeiro a ficar no topo das paradas do Reino Unido. Além desses seis álbuns de estúdio, eles também lançaram dois EP's e dois álbuns ao vivo. Eles receberam quatro Kerrang! Awards, incluindo dois de Melhor Banda Britânica e um de Melhor Banda ao Vivo. Eles também receberam duas indicações ao Grammy.
+            </p>
+            <p>
+                O estilo de seus primeiros trabalhos, incluindo seu álbum de estreia Count Your Blessings, foi descrito principalmente como deathcore, mas eles começaram a adotar um estilo mais eclético de metalcore em álbuns posteriores. Além disso, That's the Spirit marcou uma mudança em seu som para estilos musicais de rock menos agressivos. Amo viu uma mudança em diferentes gêneros, como música eletrônica, pop e hip hop.
+            </p>
+            <p>
+                Os membros fundadores do Bring Me the Horizon vieram de diversas origens musicais dentro do metal e do rock. Matt Nicholls e Oliver Sykes tinham um interesse comum no metalcore americano, bandas como Norma Jean e Skycamefalling, e costumavam assistir a shows locais de hardcore punk. Mais tarde, eles conheceram Lee Malia, que falou com eles sobre bandas de thrash metal e death metal melódico como Metallica e At the Gates; Malia também fez parte de uma banda de tributo ao Metallica antes de conhecer a dupla.  Bring Me the Horizon foi oficialmente formada em março de 2004, quando os membros tinham entre 15 e 17 anos. Curtis Ward, que também morava na área de Rotherham, se juntou a Sykes, Malia e Nicholls na bateria. O baixista Matt Kean, que estava em outras bandas locais, completou a formação. O nome da banda foi tirado da frase do filme Piratas do Caribe: A Maldição do Pérola Negra (2003) onde na versão original o capitão Jack Sparrow diz "Now, bring me that horizon.", a banda fez apenas uma ligeira alteração na frase, dando origem ao nome oficial do grupo. A banda fez seu primeiro show ao vivo em 15 de abril de 2004, no The Charter Arms em Rotherham, Inglaterra.
             </p>
         </div>
     </main>
